syntax = "proto2";
package Pinba;
option optimize_for = LITE_RUNTIME;

message Request {
	required bytes   hostname      =  1; // was string
	required bytes   server_name   =  2; // was string
	required bytes   script_name   =  3; // was string
	required uint32  request_count =  4;
	required uint32  document_size =  5;
	required uint32  memory_peak   =  6;
	required float   request_time  =  7;
	required float   ru_utime      =  8;
	required float   ru_stime      =  9;

	repeated uint32  timer_hit_count  = 10;
	repeated float   timer_value      = 11;
	repeated uint32  timer_tag_count  = 12;
	repeated uint32  timer_tag_name   = 13;
	repeated uint32  timer_tag_value  = 14;
	repeated bytes   dictionary       = 15; // was string
	optional uint32  status           = 16;
	optional uint32  memory_footprint = 17;
	repeated Request requests         = 18;
	optional bytes   schema           = 19; // was string
	repeated uint32  tag_name         = 20;
	repeated uint32  tag_value        = 21;
	repeated float   timer_ru_utime   = 22;
	repeated float   timer_ru_stime   = 23;
}
